--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <!-- Basic Meta Tags -->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Parnava Das|Maitra Web Tech</title>
+<title>Parnava Das | Maitra Web Tech</title>
 <meta name="description" content="Parnava Das is the Crative Director of Maitra Web Tech. He is a professional video editor and designer.">
 <meta name="google-site-verification" content="blank" />
 <!-- SEO Keywords -->
@@ -14,17 +14,17 @@
 <meta name="author" content="Parnava Das">
 
 <!-- Open Graph for Social Sharing -->
-<meta property="og:title" content="Parnava Das|Maitra Web Tech">
+<meta property="og:title" content="Parnava Das | Maitra Web Tech">
 <meta property="og:description" content="Professional front-end developer offering modern and animated web designs. Contact for portfolio, business, or landing websites.">
-<meta property="og:image" content="YOUR URL path-to-preview-image.jpg">
-<meta property="og:url" content="YOUR URL">
+<meta property="og:image" content="https://maitrawebtech.github.io/parnavadas/path-to-preview-image.jpg">
+<meta property="og:url" content="https://maitrawebtech.github.io/parnavadas/">
 <meta property="og:type" content="website">
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Parnava Das|Maitra Web Tech">
 <meta name="twitter:description" content="Modern, responsive, and animated websites crafted using HTML, CSS, and JavaScript.">
-<meta name="twitter:image" content="YOUR URLpath-to-preview-image.jpg">
+<meta name="twitter:image" content="https://maitrawebtech.github.io/parnavadas/path-to-preview-image.jpg">
 
 <!-- Favicon -->
 <link rel="icon" href="favicon.ico" type="image/x-icon">
