--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Parnava Das | Maitra Web Tech</title>
 <meta name="description" content="Parnava Das is the Crative Director of Maitra Web Tech. He is a professional video editor and designer.">
-<meta name="google-site-verification" content="blank" />
+<meta name="google-site-verification" content="nqEunbDPdAVVowFMDkKBqktazAKWz10PMUSfV15UMh8" />
 <!-- SEO Keywords -->
 <meta name="keywords" content="Parnava Das, Maitra Web Tech, Maitra Web Tech Creative Director, Ishan Maitra Articles, Creative Director M.W.T, Web Designer, Web Developer, Front-end Developer, HTML CSS JavaScript, Portfolio Website, Premium Web Design, Landing Page, Business Website, Responsive Design">
 
